fix syntax error

--- a/sassy.sass
+++ b/sassy.sass
@@ -46,7 +46,7 @@
 
 // Apply ‘attention’ styles in one go.
 @mixin attention($self: false)
-  @if($self != false)
+  @if $self != false
     &,
     &:hover,
     &:active,
